[gd_scene load_steps=29 format=3 uid="uid://dwxv5nw025tyh"]

[ext_resource type="Texture2D" uid="uid://rms0if48jro1" path="res://assets/sprites/stats/Sliced/GUI_4x_sliced.png" id="1_euffj"]
[ext_resource type="Script" path="res://scripts/Player/stats_gui.gd" id="1_fnm54"]
[ext_resource type="Texture2D" uid="uid://blwkda7ax2um3" path="res://assets/sprites/knight.png" id="2_wep4d"]
[ext_resource type="FontFile" uid="uid://bo1xqkmaq87nb" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_t6tu8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fisfv"]
atlas = ExtResource("2_wep4d")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp7cf"]
atlas = ExtResource("2_wep4d")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r7ep"]
atlas = ExtResource("2_wep4d")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g281r"]
atlas = ExtResource("2_wep4d")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kerd7"]
atlas = ExtResource("2_wep4d")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lwc5"]
atlas = ExtResource("2_wep4d")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfmyo"]
atlas = ExtResource("2_wep4d")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_il50q"]
atlas = ExtResource("2_wep4d")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovc4s"]
atlas = ExtResource("2_wep4d")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1mbx"]
atlas = ExtResource("2_wep4d")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eungc"]
atlas = ExtResource("2_wep4d")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy0g3"]
atlas = ExtResource("2_wep4d")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_re0rr"]
atlas = ExtResource("2_wep4d")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_36qmt"]
atlas = ExtResource("2_wep4d")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwyu6"]
atlas = ExtResource("2_wep4d")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2ri"]
atlas = ExtResource("2_wep4d")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_257cx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fisfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pp7cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r7ep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g281r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kerd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lwc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfmyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_il50q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovc4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1mbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eungc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy0g3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re0rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36qmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwyu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2ri")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8ciev"]
atlas = ExtResource("1_euffj")
region = Rect2(0, 544, 32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_xsye6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8x"]
atlas = ExtResource("1_euffj")
region = Rect2(216, 580, 32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_66kp6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s66vh"]
atlas = ExtResource("1_euffj")
region = Rect2(40, 544, 28, 32)

[sub_resource type="LabelSettings" id="LabelSettings_5ak52"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4i1pp"]
atlas = ExtResource("1_euffj")
region = Rect2(180, 544, 32, 32)

[node name="StatsGUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fnm54")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.535361, 0.687861, 0.8754, 0.745098)

[node name="TitleContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 64.0
offset_top = 88.0
offset_right = -64.0
offset_bottom = 152.0
grow_horizontal = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_t6tu8")
theme_override_font_sizes/font_size = 64
text = "STATS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 160.0
offset_right = -576.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayerContainer" type="VBoxContainer" parent="LeftContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerSpriteContainer" type="HBoxContainer" parent="LeftContainer/PlayerContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="PlayerSprite" type="AnimatedSprite2D" parent="LeftContainer/PlayerContainer/PlayerSpriteContainer"]
position = Vector2(62, 72)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_257cx")
animation = &"idle"
autoplay = "idle"

[node name="PlayerNameContainer" type="HBoxContainer" parent="LeftContainer/PlayerContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="PlayerName" type="Label" parent="LeftContainer/PlayerContainer/PlayerNameContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_t6tu8")
theme_override_font_sizes/font_size = 32
text = "PlayerName
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 576.0
offset_top = 160.0
offset_right = -64.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="RightContainer"]
layout_mode = 2

[node name="HealthContainer" type="VBoxContainer" parent="RightContainer/StatsContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="HealthTextContainer" type="HBoxContainer" parent="RightContainer/StatsContainer/HealthContainer"]
layout_mode = 2

[node name="HealthTexture" type="TextureRect" parent="RightContainer/StatsContainer/HealthContainer/HealthTextContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_8ciev")

[node name="PlayerHealth" type="Label" parent="RightContainer/StatsContainer/HealthContainer/HealthTextContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_t6tu8")
theme_override_font_sizes/font_size = 32
text = "Health"
label_settings = SubResource("LabelSettings_xsye6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedContainer" type="VBoxContainer" parent="RightContainer/StatsContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="SpeedTextContainer" type="HBoxContainer" parent="RightContainer/StatsContainer/SpeedContainer"]
layout_mode = 2

[node name="SpeedTexture" type="TextureRect" parent="RightContainer/StatsContainer/SpeedContainer/SpeedTextContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_c4w8x")

[node name="PlayerSpeed" type="Label" parent="RightContainer/StatsContainer/SpeedContainer/SpeedTextContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_t6tu8")
theme_override_font_sizes/font_size = 32
text = "Speed"
label_settings = SubResource("LabelSettings_66kp6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="JumpContainer" type="VBoxContainer" parent="RightContainer/StatsContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="JumpTextContainer" type="HBoxContainer" parent="RightContainer/StatsContainer/JumpContainer"]
layout_mode = 2

[node name="JumpTexture" type="TextureRect" parent="RightContainer/StatsContainer/JumpContainer/JumpTextContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_s66vh")

[node name="PlayerJump" type="Label" parent="RightContainer/StatsContainer/JumpContainer/JumpTextContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_t6tu8")
theme_override_font_sizes/font_size = 32
text = "Jump"
label_settings = SubResource("LabelSettings_5ak52")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InvincibilityContainer" type="VBoxContainer" parent="RightContainer/StatsContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="InvincibilitTextContainer" type="HBoxContainer" parent="RightContainer/StatsContainer/InvincibilityContainer"]
layout_mode = 2

[node name="InvincibilityTexture" type="TextureRect" parent="RightContainer/StatsContainer/InvincibilityContainer/InvincibilitTextContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_4i1pp")

[node name="PlayerInvinciblity" type="Label" parent="RightContainer/StatsContainer/InvincibilityContainer/InvincibilitTextContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_t6tu8")
theme_override_font_sizes/font_size = 32
text = "Invincibility"
label_settings = SubResource("LabelSettings_5ak52")
horizontal_alignment = 1
vertical_alignment = 1
